--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@stripe/stripe-react-native": "0.45.0",
     "@types/puppeteer": "^5.4.7",
     "buffer": "^6.0.3",
     "expo": "^53.0.20",
