--- a/client/app.json
+++ b/client/app.json
@@ -39,6 +39,18 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "f6e4ce70-d780-4dd1-80cd-73032bde3322"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f6e4ce70-d780-4dd1-80cd-73032bde3322"
     }
   }
 }
